tests/typing/fail/redef-03.rs
use rust_sync::sync;

sync! {
    node oui(hello : int, hello : int) = ()
    where
        o : int = o;
}

fn main() {}
